[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameFrontHUDRelated/GameFrontHUD.gd" type="Script" id=1]
[ext_resource path="res://GameFrontHUDRelated/Subs/AbilityPanel/AbilityPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameFrontHUDRelated/Subs/EnergyPanel/EnergyPanel.tscn" type="PackedScene" id=3]

[node name="GameFrontHUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="OtherHosters" type="Node" parent="."]

[node name="ControlContainer" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2

[node name="AbilityPanel" parent="ControlContainer" instance=ExtResource( 2 )]
margin_left = 18.0
margin_top = 442.0
margin_right = 173.0
margin_bottom = 522.0
mouse_filter = 2

[node name="EnergyPanel" parent="ControlContainer" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -132.0
margin_top = 20.0
margin_right = 132.0
margin_bottom = 68.66
grow_horizontal = 0
